test/compile_errors/stage1/obj/deref_slice_and_get_len_field.zig
export fn entry() void {
    var a: []u8 = undefined;
    _ = a.*.len;
}

// deref slice and get len field
//
// tmp.zig:3:10: error: attempt to dereference non-pointer type '[]u8'
